# summa

./: .gitignore  Cargo.toml  DEPLOYED.md  Makefile  README.md  deploy.sh
.cargo/: config.toml
contracts/confidential-asset/: Cargo.toml  Summa.sol  Summa_sol_ISummaConfidentialAsset.abi  Summa_sol_IVeilPoP.abi  Summa_sol_SummaRouter.abi
contracts/confidential-asset/src/: main.rs
docs/: TECHNICAL.md  benchmark.md  current.md  live_testing.md  paper.tex  veil.md
summa/: Cargo.toml  README.md
summa/src/: ciphertext.rs  client.rs  curve.rs  dleq.rs  keys.rs  lib.rs  range_proof.rs  shielded.rs  tests.rs  veil.rs
summa/tests/: generate_live_payloads.rs  get_h.rs
tools/gen-ciphertext/: Cargo.toml
tools/gen-ciphertext/src/: main.rs
